Revert fix for now (covering content)

--- a/src/mobile/components/layout/stylesheets/main_header.styl
+++ b/src/mobile/components/layout/stylesheets/main_header.styl
@@ -95,6 +95,3 @@ header-height = 54px
 
 #main-header-search-button
   display none
-
-#main-layout-header
-  position fixed
